--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,8 @@ body {
   font-size: 1.5rem;
 }
 .texts {
+  height: calc(80vh - 30px);
+  width: calc(100% - 30px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -170,6 +172,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow-y: auto;
+  padding: 15px;
 }
 
 .texts div {
@@ -199,16 +203,15 @@ body {
   border-radius: 15px;
 }
 .message-header {
-  background-color: white;
-  border-radius: 25px;
+  background: linear-gradient(#383838, #111);
+  border-radius: 25px 25px 0px 0px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 10px 0px;
+  margin: 0px;
   padding: 15px 0px;
-  color: #292424;
+  color: whitesmoke;
   text-transform: uppercase;
-  width: 98%;
 }
 .message-header p {
   margin: 0px;
@@ -419,14 +422,7 @@ body {
 .FriendDetails.active {
   width: 250px;
 }
-.texts {
-  background-color: rgb(250, 252, 255);
-  width: 95%;
-  height: 80vh;
-  padding: 25px;
-  border-radius: 25px;
-  overflow: auto;
-}
+
 .texts div {
   width: 25%;
   padding: 15px;
@@ -452,10 +448,9 @@ body {
 .SendMessage {
   background-color: white;
   height: 15%;
-  width: 99%;
   padding: 0px;
-  margin: 15px auto;
-  border-radius: 25px;
+  margin: 0px;
+  border-radius: 0px 0px 25px 25px;
   display: flex;
   align-items: center;
 }
@@ -481,7 +476,7 @@ body {
 .SendMessage button {
   padding: 15px 0px;
   width: 15%;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 0px 0px 25px 0px;
   box-sizing: border-box;
   border: none;
   outline: none;
@@ -495,10 +490,9 @@ body {
 .SendGroupMessage {
   background-color: white;
   height: 15%;
-  width: 99%;
   padding: 0px;
-  margin: 15px auto;
-  border-radius: 25px;
+  margin: 0px;
+  border-radius: 0px 0px 25px 25px;
   display: flex;
   align-items: center;
 }
@@ -524,7 +518,7 @@ body {
 .SendGroupMessage button {
   padding: 15px 0px;
   width: 15%;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 0px 0px 25px 0px;
   box-sizing: border-box;
   border: none;
   outline: none;
